prevent leak of personal details by hiding cert details

--- a/src/app/content/add/check/check.component.html
+++ b/src/app/content/add/check/check.component.html
@@ -16,7 +16,7 @@
       </p>
     </ng-template>
 
-    <app-cert-details [cert]="cert"></app-cert-details>
+    <app-cert-details [cert]="cert" [showDetails]="true" [showToggleButton]="false"></app-cert-details>
     <div class="buttons">
       <button class="cancel" (click)="onCancel()">
         <span class="ti ti-arrow-back"></span>
