--- a/src/app/shared/cert-details/cert-details.component.scss
+++ b/src/app/shared/cert-details/cert-details.component.scss
@@ -27,6 +27,10 @@ div > div {
   margin-top: 2rem;
 }
 
+button{
+  width: 100%;
+}
+
 @media screen and (max-width: 480px) {
   dl {
     display: block;
