--- a/src/app/shared/cert-details/cert-details.component.html
+++ b/src/app/shared/cert-details/cert-details.component.html
@@ -27,8 +27,8 @@
   <div *ngIf="showToggleButton">
     <button (click)="ToggleDetails()">
       <span class="ti ti-eye"></span>
-      <span *ngIf="showDetails">Hide Certificate details</span>
-      <span *ngIf="!showDetails">Show Certificate details</span>
+      <span *ngIf="showDetails" appIntl="cert-action-hide">Hide Certificate details</span>
+      <span *ngIf="!showDetails" appIntl="cert-action-show">Show Certificate details</span>
     </button>
   </div>
   <div *ngIf="showDetails">
