fix NG0100 on qrcode by removing repeating calculations

--- a/src/app/shared/qrcode/qrcode.component.scss
+++ b/src/app/shared/qrcode/qrcode.component.scss
@@ -1,3 +1,11 @@
 .qrcode {
   text-align: center;
 }
+
+
+:host qr-code::ng-deep img {
+  border-radius: .7rem;
+  object-fit: contain;
+  width: 100%;
+  height: auto;
+}
