--- a/src/app/shared/qrcode/qrcode.component.html
+++ b/src/app/shared/qrcode/qrcode.component.html
@@ -1,3 +1,3 @@
-<div class="qrcode" #container>
-  <qr-code [value]="data" [size]="clamp(container.offsetWidth, 450)" [level]="'L'" ></qr-code>
+<div class="qrcode">
+  <qr-code [value]="data" [size]="size" [level]="'L'" ></qr-code>
 </div>
