--- a/src/app/shared/qrcode/qrcode.component.html
+++ b/src/app/shared/qrcode/qrcode.component.html
@@ -1,3 +1,3 @@
 <div class="qrcode">
-  <qr-code [value]="data" [size]="size" [level]="'L'" ></qr-code>
+  <qr-code [value]="data" [size]="size" [level]="'L'" [padding]="'16'"></qr-code>
 </div>
