fix horizontal centering of qr code

--- a/src/app/shared/qrcode/qrcode.component.scss
+++ b/src/app/shared/qrcode/qrcode.component.scss
@@ -1,6 +1,6 @@
 .qrcode {
   display:flex;
-  justify-items: center;
+  justify-content: center;
   align-items: center;
   width: 100%;
   border-radius: .4rem;
