allow overriding color scheme

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -1,6 +1,6 @@
 @mixin apply($theme){
 
-  body{
+  & {
     background-color: map-get($theme, 'background');
     color: map-get($theme, 'primary');
   }
