--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -49,6 +49,11 @@
     color: map-get($theme, 'btn-primary');
     background-color: lighten(hsl(207, 53%, 47%), 5%);
   }
+  button.pressed, .btn.pressed{
+    color: map-get($theme, 'btn-primary');
+    background-color: darken(hsl(207, 53%, 47%), 15%);
+    outline: 3px solid hsla(207, 53%, 47%, 0.25);
+  }
 
   header a{
     color: map-get($theme, 'primary');
@@ -73,11 +78,13 @@
     background-color: lighten(map-get($theme, "success"), 5%);
   }
 
-  .btn.outline{
-    background-color: transparent;
-    border: 1px solid red;
-    padding: .3rem;
-    border-radius: 100%;
+  select {
+    color: map-get($theme, 'primary');
+    background-color: lighten(map-get($theme, 'panel'), 5%);
+    border-color: map-get($map: $theme, $key: "faded");
+  }
+  select:hover{
+    background-color: lighten(map-get($theme, 'panel'), 10%);
   }
 
   .instructions {
