--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,6 +125,17 @@ button, .btn{
   margin: 0 auto;
 }
 
+select {
+  display: block;
+  width: 70%;
+  margin: 0 auto;
+  padding: 0.6rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 1px solid;
+  border-radius: .4rem;
+}
+
 // Create a theme for both color scheem
 @media (prefers-color-scheme: light) {
   body {
