--- a/src/app/content/cert/cert-page/cert-page.component.html
+++ b/src/app/content/cert/cert-page/cert-page.component.html
@@ -9,7 +9,7 @@
     <br>
     <app-cert-details [cert]="cert" class="details"></app-cert-details>
     <div class="actions">
-      <button class="cancel" (click)="Remove()">
+      <button class="cancel" (click)="remove()">
         <span class="ti ti-trash"></span>
         <span appIntl="view-action-remove" *ngIf="removeStep === 0">Remove certificate</span>
         <span appIntl="view-action-remove-confirm" *ngIf="removeStep === 1">Tap again to confirm</span>
