--- a/src/app/content/list/list-page/list-page.component.html
+++ b/src/app/content/list/list-page/list-page.component.html
@@ -20,7 +20,7 @@
     You can also add the application to your homepage!
     You'll then be able to open it even without an internet connection.
   </p>
-  <button (click)="Install()">
+  <button (click)="install()">
     <span class="ti ti-home"></span>
     <span appIntl="list-action-install">Add to homepage</span>
   </button>
