--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
     </a>
   </div>
   <div class="logo">
-    <a routerLink="/">
-      <img src="assets/icon.svg" class="icon"/>
+    <a [routerLink]="homeUrl$ | async" title="Go to home">
+      <img src="assets/icon.svg" class="icon" title="Covid Certificate"/>
     </a>
   </div>
   <div class="settings">
